changed the color of the background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         minWidth: 200.00,
         scale: 1.00,
         scaleMobile: 1.00,
-        color: 0x880037
+        color: 0x731DD8
         })
     })
     </script>
