fixing overflow issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,8 @@
     })
     </script>
 </head>
-<body>
-    <div id="vanta"></div>
+<body id="vanta">
+    <div></div>
     <main>
         <header>
             <img src="/img/Profile Picture with Background.png" alt="Profile Pic">
