--- a/public/index.css
+++ b/public/index.css
@@ -2,9 +2,7 @@ body, html{
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: #cb2d3e;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #731DD8;
 }
 
 #vanta{
